<resources>
    <!-- Generic strings -->
    <string name="app_name">CGM Follower</string>
    <string name="defaultGlucoseValue">N/A</string>
    <string name="defaultGlucoseTrend"></string>
    <string name="emailLabel">Email</string>
    <string name="passwordLabel">Password</string>
    <string name="glucoseMeasureUnit">mg/dL</string>
    <string name="menuRefresh">Refresh</string>
    <string name="menuInfo">Info</string>
    <string name="textOk">OK</string>
    <string name="textSave">Save</string>
    <string name="notificationChannelId">dexcom_channel_01</string>
    <string name="notificationChannelName">CGMFollower</string>
    <string name="notificationChannelDescription">Notification channel for CGMFollower</string>
    <string name="highGlucoseValue">High glucose value</string>
    <string name="lowGlucoseValue">Low glucose value</string>
    <string name="normalGlucoseValue">Normal glucose value</string>
    <string name="autoCancelNotifications">Auto cancel notifications for HarmonyOS Lite</string>
    <string name="disableNotifications">Disable notifications</string>
    <string name="disableNotificationsSound">Disable notifications sound</string>
    <string name="enableDebugMode">Enable Debug Mode</string>
    <string name="buttonLoginText">Login</string>
    <string name="applicationsSettingsTitleText">Settings</string>
    <string name="applicationsInviteFollowerTitleText">Invite follower</string>
    <string name="applicationsSettingsBackText">Back</string>
    <string name="myAccountTitleText">My Account</string>
    <string name="logoutTitleText">Log out</string>
    <string name="text3h">3h</string>
    <string name="text6h">6h</string>
    <string name="text12h">12h</string>
    <string name="text24h">24h</string>
    <string name="textAddEvent">Add event</string>
    <string name="textCarbsCount">Carbohydrates</string>
    <string name="textInsulinCount">Insulin</string>
    <string name="defaultValueCarbsCount">0</string>
    <string name="defaultValueInsulinCount">0.0</string>
    <string name="textInviteFollowers">Invite followers</string>
    <string name="textSendInviteToFollower">Send invite</string>
    <string name="textFollowerInvitePhoneNo">Phone number of the person to invite</string>
    <string name="textSenderPhoneNo">Your phone number</string>
    <string name="checkboxLoginThermsAndConditions">Please agree before continue</string>
    <string name="textInvitationSent">The invite has been sent</string>
    <string name="textInvitationNotSent">The invite could not be sent</string>
    <!-- Permission names -->
    <string name="permissionFriendlyNameForegroundService">Glucose Monitoring Service</string>
    <string name="permissionFriendlyNamePostNotifications">Receive Glucose Value Notifications</string>
    <string name="permissionFriendlyNameDisableBatteryOptimization">Disable Battery Battery Optimization</string>
    <string name="permissionFriendlyNameSendSms">Send SMS</string>
    <string name="permissionFriendlyNameReadPhoneState">Read Phone Status</string>
    <!-- Variables -->
    <string name="variableNameGenericData">data</string>
    <string name="variableNameLoginFailed">loginFailed</string>
    <string name="variableNameLoginFormMessage">loginFormMessage</string>
    <string name="autologinUrlPrefix">https://cgmfollower/login</string>
    <!-- Messages -->
    <string name="messageLoginFailed">Invalid username or password. Please try again!</string>
    <string name="messageSupportedRegions">Currently, we support Dexcom Accounts from USA only!</string>
    <string name="noGlucoseHistoryData">No data available!</string>
    <string name="textPermissionGranted">permission granted</string>
    <string name="textPermissionDenied">permission denied</string>
    <string name="textPermissionRequired">Permission required</string>
    <string name="textPermissionsRequiredToUseInviteFollowerFunction">The following permissions are required in order to run the Follow functionality</string>
    <string name="textPhoneNumberNullEmptyInvalid">Please type in a valid phone number</string>
    <string name="messageInvalidUserKey">Invalid user key</string>
    <string name="messageUserKeyUnavailable">Could not recover user key from the cloud</string>
    <string name="notificationsRequiredInTheApp">Please enable notifications to use this app</string>
    <!-- Labels / Hints -->
    <string name="hintGlucoseMinValueChart">Glucose min value (Chart)</string>
    <string name="hintEditGlucoseMinValueChart">Edit glucose min value (Chart)</string>
    <string name="hintGlucoseMaxValueChart">Glucose max value (Chart)</string>
    <string name="hintEditGlucoseMaxValueChart">Edit glucose max value (Chart)</string>
    <string name="hintGlucoseUrgentLowThreshold">Urgent low glucose threshold</string>
    <string name="hintEditGlucoseUrgentLowThreshold">Edit urgent low glucose threshold</string>
    <string name="hintGlucoseLowThreshold">Glucose low threshold</string>
    <string name="hintEditGlucoseLowThreshold">Edit glucose low threshold</string>
    <string name="hintGlucoseHighThreshold">Glucose high threshold</string>
    <string name="hintEditGlucoseHighThreshold">Edit glucose high threshold</string>
    <string name="hintRunMode">Run mode</string>
    <string name="textPhoneHint">+40 111 111 111</string>
    <string name="textPhone2Hint">+40 222 222 222</string>
    <!-- Long messages -->
    <string name="limitedResponsibility">ATTENTION: Please carefully read this before continue.\n\nThis application is NOT an official Dexcom Application and is NOT related in any way with Dexcom.\n\nThe application is for informational purposes only and is not intended to be a substitute for professional medical advice, diagnosis, or treatment.\nThe app\'s creators and publishers are not responsible for any adverse effects or consequences that may result from the use of this app.\n\nThe app is provided \"as is\" and without any warranties, express or implied.\nThe app\'s creators and publishers disclaim all liability for any direct or indirect damages caused by the use of this app.\n\nPlease use at your own risk.\n\nPlease read our <a href="https://sites.google.com/view/cgmfollower">Terms and conditions </a> very carefully.\n\nBy using this app, you agree to these terms and conditions.</string>
    <string name="minimumRequirements">ATTENTION: For the app to work correctly you need to make sure the following settings are enabled for your application:\n\n1. Notifications are allowed\n2. The app is NOT paused if unused\n3. The permissions are NOT removed if app unused\n4. Application has unrestricted data usage\n5. Application has unrestricted battery usage\n\nPlease reffer to your device configuration for each settings.</string>
    <string name="requiredPermissionsList">Recommended settings for this application:\n\n1. Notifications are allowed\n\n2. Uncheck \"Pause app activity if unused\" checkbox under application permissions\n\n3. Uncheck \"Remove perissions if app unused\" checkbox\n\n4. Battery settings for the application is set to \"Unrestricted\"\n\n5. Mobile data is allowed for background data and while \"Data saver\" is on\n</string>
    <string name="infoEventSavedLocally">NOTE:\n\nThe current version of the application saves the events locally only for the last 24h display purpose.\nYou will not see these events in your glucose history manager.</string>
    <string name="infoFollowerMustStartAppFirst">"IMPORTANT:\nPlease ask the follower to start the app after installation\nin order to subscribe automatically to receive invites "</string>
    <!-- Regular expressions -->
    <string name="regexSmsWakeupMessageDeprecated">^(.+?):(.+?)\\-N(.+?)\\-PS(.*?)\\-PR(.+?) (.*)$</string>
    <string name="regexSmsWakeupMessage">^https://cgmfollower/(.+?)\\?(.+?)=(.+?) (.*)$</string>
</resources>