<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ionut.andras.community.cgm.follower.AddNewUserEventActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addUserEventActivityActionToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="1sp"
        android:theme="@style/ToolbarStyle"
        android:contentDescription="@string/textAddEvent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ToolbarStyle"
        app:title=" ">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textAddEvent" />
    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/textViewInsulinCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/textInsulinCount"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextInsulinCount"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCarbsCount" />

    <EditText
        android:id="@+id/editTextInsulinCount"
        android:layout_width="87dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/defaultValueInsulinCount"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="gravity"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCarbsCount" />

    <EditText
        android:id="@+id/editTextCarbsCount"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/defaultValueCarbsCount"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="gravity"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addUserEventActivityActionToolbar" />

    <TextView
        android:id="@+id/textViewCarbsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="132dp"
        android:text="@string/textCarbsCount"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextCarbsCount"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addUserEventActivityActionToolbar" />

    <TextView
        android:id="@+id/textViewEventSavedLocally"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/infoEventSavedLocally"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />

    <DatePicker
        android:id="@+id/datePickerEventDate"
        android:layout_width="283dp"
        android:layout_height="104dp"
        android:layout_marginTop="36dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextInsulinCount" />

    <TimePicker
        android:id="@+id/timePickerEventTime"
        android:layout_width="284dp"
        android:layout_height="109dp"
        android:layout_marginTop="172dp"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextInsulinCount" />

    <Button
        android:id="@+id/btnAddEventSave"
        android:layout_width="173dp"
        android:layout_height="48sp"
        android:layout_marginBottom="36dp"
        android:text="@string/textSave"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>