<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ionut.andras.community.cgm.follower.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainActivityActionToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="1sp"
        android:theme="@style/ToolbarStyle"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ToolbarStyle"
        app:title=" ">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"/>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/glucoseValue"
        android:layout_width="131dp"
        android:layout_height="77dp"
        android:autoSizeTextType="uniform"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/defaultGlucoseValue"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.217" />

    <TextView
        android:id="@+id/glucoseValueTime"
        android:layout_width="284dp"
        android:layout_height="24dp"
        android:autoSizeTextType="uniform"
        android:ellipsize="none"
        android:foregroundGravity="center"
        android:gravity="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/glucoseMeasureUnit"
        android:layout_width="215dp"
        android:layout_height="25dp"
        android:autoSizeTextType="uniform"
        android:ellipsize="none"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/glucoseMeasureUnit"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.339" />

    <TextView
        android:id="@+id/glucoseTrend"
        android:layout_width="113dp"
        android:layout_height="68dp"
        android:layout_marginStart="116dp"
        android:layout_marginBottom="32dp"
        android:autoSizeTextType="uniform"
        android:text="@string/defaultGlucoseTrend"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/glucoseMeasureUnit"
        app:layout_constraintStart_toStartOf="@+id/glucoseValue" />

    <Button
        android:id="@+id/plotBtn3h"
        android:layout_width="63dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:onClick="btn3hOnClick"
        android:text="@string/text3h"
        android:textColor="@color/white"
        android:background="@color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/lineChart"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/plotBtn6h"
        android:layout_width="63dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="4dp"
        android:onClick="btn6hOnClick"
        android:text="@string/text6h"
        android:textColor="@color/white"
        android:background="@color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/lineChart"
        app:layout_constraintStart_toEndOf="@+id/plotBtn3h" />

    <Button
        android:id="@+id/plotBtn12h"
        android:layout_width="63dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="4dp"
        android:onClick="btn12hOnClick"
        android:text="@string/text12h"
        android:textColor="@color/white"
        android:background="@color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/lineChart"
        app:layout_constraintStart_toEndOf="@+id/plotBtn6h" />

    <Button
        android:id="@+id/plotBtn24h"
        android:layout_width="63dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="4dp"
        android:onClick="btn24hOnClick"
        android:text="@string/text24h"
        android:textColor="@color/white"
        android:background="@color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/lineChart"
        app:layout_constraintStart_toEndOf="@+id/plotBtn12h" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="0dp"
        android:layout_height="327dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="285dp"
        android:layout_height="338dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="9dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <!-- Need a default list for Android internal callbacks -->
        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <Button
        android:id="@+id/btnMainActivityAddEvent"
        android:layout_width="166dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:onClick="btnAddEventOnClick"
        android:text="@string/textAddEvent"
        app:layout_constraintBottom_toTopOf="@+id/plotBtn24h"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>