<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InviteFollowerActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/inviteFollowerActivityActionToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="1sp"
        android:theme="@style/ToolbarStyle"
        android:contentDescription="@string/textInviteFollowers"
        android:autofillHints="@string/textInviteFollowers"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ToolbarStyle"
        app:title=" ">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textInviteFollowers"
            android:contentDescription="@string/textInviteFollowers"
            android:labelFor="@id/inviteFollowerActivityActionToolbar"
            />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/inviteFollowersPhoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/textFollowerInvitePhoneNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inviteFollowerActivityActionToolbar" />

    <EditText
        android:id="@+id/sendInviteToFollowerPhoneEditText"
        android:layout_width="338dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/textPhone2Hint"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inviteFollowersPhoneLabel"
        android:autofillHints="phoneNumber" />

    <TextView
        android:id="@+id/personalPhoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/textSenderPhoneNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendInviteToFollowerPhoneEditText" />

    <EditText
        android:id="@+id/personalPhoneEditText"
        android:layout_width="338dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/textPhoneHint"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personalPhoneLabel"
        android:autofillHints="phoneNumber" />


    <TextView
        android:id="@+id/inviteFollowersNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="28dp"
        android:text="@string/infoFollowerMustStartAppFirst"
        android:textColor="@color/light_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.377"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personalPhoneEditText" />

    <!--ScrollView
        android:id="@+id/inviteFollowersExistingListScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:scrollbarStyle="insideOverlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inviteFollowersNote">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkboxDisclaimer"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="44dp"
                android:clickable="true"
                android:longClickable="false"
                android:onClick="checkboxDisclaimerChanged"
                android:text="@string/checkboxLoginThermsAndConditions"
                app:layout_constraintStart_toStartOf="@+id/loginDisclaimerScrollView" />

        </LinearLayout>
    </ScrollView-->


    <Button
        android:id="@+id/btnSendInviteToFollower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/textSendInviteToFollower"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>